--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"400\" align=\"center\"></a>\n",
+    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"100\" align=\"center\"></a>\n",
     "\n",
     "<h1><center>Applied Capstone Project</center></h1>"
    ]
@@ -38,9 +38,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -52,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
