--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"100\" align=\"center\"></a>\n",
-    "\n",
+    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"200\" align=\"center\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h1><center>Applied Capstone Project</center></h1>"
    ]
   },
