--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"200\" align=\"center\"></a>"
+    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"200\" align=\"center\"/></a>"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
