--- a/Capstone.ipynb
+++ b/Capstone.ipynb
@@ -4,42 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"200\" align=\"center\"/></a>"
+    "<a href=\"https://www.bigdatauniversity.com\"><img src=\"Cognitive-Class-Logo.png\" width=\"200\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center>Applied Capstone Project</center></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1><center>Applied Capstone Project</center></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1><center>Applied Capstone Project</center></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1><center>Applied Capstone Project</center></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1><center>Applied Capstone Project</center></h1>"
+    "<h1>Applied Capstone Project</h1>"
    ]
   },
   {
