--- a/week_5/Capstone_Final Report.ipynb
+++ b/week_5/Capstone_Final Report.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "<h4>Scarborough borough neighborhood analysis insights</h4>\n",
     "\n",
-    "<img src=\"sacrborough_cluster_map.png\" width=400></img>\n",
+    "<img src=\"sacrborough_cluster_map.png\" width=400></img> ![](sacrborough_cluster_map.png)\n",
     "Cluster labels - [0,1,2,3,4]\n",
     "\n",
     "1. Cluster 0 - 4 neighborhoods with most important venues being [Coffee shop, Chinese restaurant, Intersection]\n",
